--- a/css/style.css
+++ b/css/style.css
@@ -5,43 +5,29 @@
     box-sizing: border-box;
 }
 
-ul {
-    display: inline-block;
+html, body {
+    width: 100%;
 }
 
-li {
-    list-style: none;
-    display: inline-block;
-}
-
-a {
-    text-decoration: none;
-}
-
-h1 {
-    font-family: 'Merriweather';
-    font-weight: bolder;
-    font-size: 60px;
-    color: rgb(63, 99, 122);
-    display: inline-block;
-}
-
-/*BODY STYLES*/
+/* =================================
+    ELEMENTOS BASE
+================================= */
 #body {
     max-width: 100%;
-    max-height: 100%;
+    min-height: 100vh;
     background-color: rgb(234, 242, 248);
     display: flex;
     flex-direction: column;
 }
 
-/*HEADER STYLES*/
+/* =================================
+    HEADER
+================================= */
 #header {
     width: 100%;
     height: 120px;
 }
 
-/*NAV STYLES*/
 #nav {
     width: 100%;
     height: 100%;
@@ -51,47 +37,83 @@ h1 {
     align-items: center;
 }
 
-#nav ul {
-    width: 60%;
+.header__marca {
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 0;
-    margin: 0;
-}
-
-#nav ul a {
-    font-family: 'Merriweather';
-    font-size: 30px;
-    height: 100%;
-    color: rgb(63, 99, 122);
-}
-
-.section-title-logo{
-    height: 100%;
-    width: 10%;
+    width: auto;
     display: flex;
     align-items: center;
     padding-left: 50px;
 }
 
-.section-header {
+.header__imagen-logo {
+    width: 110px;
+    padding-right: 10px;
+}
+
+.header__titulo {
+    font-family: 'Merriweather';
+    font-weight: bolder;
+    font-size: 45px;
+    color: rgb(63, 99, 122);
+    display: inline-block;
+    padding-right: 100px;
+}
+
+/* ESTILOS BOOTSTRAP NAVBAR */
+.navbar {
+    padding: 0;
+}
+
+.navbar-toggler {
+    padding: 10px;
+    border: none;
+    background: none;
+    color: rgb(63, 99, 122);
+    margin-right: 20px;
+}
+
+.navbar-toggler:focus {
+    box-shadow: none;
+}
+
+.navbar-toggler i {
+    font-size: 24px;
+}
+
+.header__menu {
     display: flex;
-    justify-content: end;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding-right: 50px;
     width: 100%;
     height: 100%;
     align-items: center;
 }
 
-
-.header-logo {
-    width: 110px;
-    padding-right: 10px;
+.header__lista {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
 }
 
-.navUserCart {
+.header__item {
+    display: inline-block;
+}
+
+.header__enlace {
+    font-family: 'Merriweather';
+    font-size: 25px;
+    height: 100%;
+    color: rgb(63, 99, 122);
+    text-decoration: none;
+    padding: 10px 15px;
+}
+
+.header__acciones {
     width: 5%;
     height: 100%;
     display: flex;
@@ -99,35 +121,38 @@ h1 {
     align-items: center;
 }
 
+.header__acciones i {
+    padding-left: 10px;
+}
 
-/*---------------INICIO----------------*/
-
-/*MAIN STYLE*/
-
+/* =================================
+    MAIN
+================================= */
 #main {
     max-width: 100%;
-    max-height: auto;
+    flex: 1;
+    overflow-x: hidden;
+    margin: 0 auto;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.search {
-    width: 100%; 
+.buscador {
+    width: 100%;
     height: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 0;
 }
 
-.search input {
+.buscador__input {
     width: 30%;
     border-radius: 10px;
     border-color: gainsboro;
+    padding: 8px 15px;
 }
 
-
-.p-inicio {
+.main__titulo-destacados {
     font-family: 'Merriweather';
     font-size: 45px;
     color: rgb(63, 99, 122);
@@ -135,92 +160,116 @@ h1 {
     padding-top: 30px;
 }
 
-.article-p {
+.productos {
     display: flex;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
-
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
 }
 
-.main-foto-destacada {
+.producto {
+    flex: 0 1 300px;
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.producto__imagen {
     width: 300px;
+    height: auto;
 }
 
-.main-p-destacada {
+.producto__descripcion {
     max-width: 85%;
     background-color: white;
     display: inline-block;
     color: rgb(63, 99, 122);
     text-align: start;
+    margin-top: 10px;
 }
 
-/*FOOTER STYLE*/
-
+/* =================================
+    FOOTER
+================================= */
 #footer {
     width: 100%;
-    height: 110px;
+    height: auto;
+    min-height: 110px;
     background-color: rgb(212, 230, 241);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding: 15px;
 }
 
-
-.footer-logo img {
-    width: 50px;
-}
-
-.footer-logoRedes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-}
-
-.footer-logoRedes img {
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 100px;
-}
-
-.footer-toggle {
-    width: 35%;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.footer-news{
+.footer__novedades {
     width: 35%;
     max-height: 100%;
     display: flex;
     align-items: center;
 }
 
-.footer-news h4 {
+.footer__titulo {
     font-family: 'Merriweather';
     font-size: 15px;
 }
 
-.form-control{
+.footer__input {
     width: 300px;
 }
 
+.footer__contenido {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    gap: 20px;
+    padding-right: 140px;
+}
 
-/*CATALOGO*/
+.redes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 15px;
+}
 
+.redes__grupo {
+    display: flex;
+    gap: 15px;
+}
 
-/****** MAIN ********/
+.redes__enlace {
+    color: rgb(63, 99, 122);
+}
+
+.footer__logo {
+    width: 80px;
+    padding: 0 15px;
+}
+
+.tema {
+    width: 35%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* =================================
+    CATALOGO MAIN
+================================= */
 
 .catalogo-formSelect{
     width: 100%;
     display: flex;
-    justify-content: end;
-    padding-right: 20px;
+    justify-content: flex-end;
 }
 
 .form-select{
@@ -228,34 +277,34 @@ h1 {
     border-radius: 20px;
 }
 
-.catalogo-main-h2 {
+.catalogo__main--h2 {
     font-size: 80px;
     font-family: 'Merriweather';
     padding-top: 20px;
 }
-.catalogo-article-p {
+.catalogo__article--p {
     width: 100%;
     height: auto;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 8px;
     padding-top: 20px;
     overflow-y: auto;
     object-fit: cover;
 }
 
-/*UBICACION*/
+/* =================================
+    UBICACION MAIN
+================================= */
 
-/****** MAIN ********/
-
-.ubicacion-main-h2 {
+.ubicacion__main--h2 {
     font-size: 60px;
     padding-top: 60px;
     font-family: 'Merriweather';
 }
 
-.ubicacion-main-mapa {
+.ubicacion__main--mapa {
     display: flex;
     justify-content: center;
     max-height: 100%;
@@ -264,14 +313,14 @@ h1 {
     padding-bottom: 110px;
 }
 
-.ubicacion-imagen-mapa {
-    width: 700px;
-    height: 600px;
+.ubicacion__imagen--mapa {
+    width: 600px;
+    height: 500px;
     object-fit: cover;
-    padding-right: 50px;
+    padding: 0 50px 0 50px;
 }
 
-.ubicacion-ejemploSucursales {
+.ubicacion__ejemploSucursales {
     height: 100%;
     width: 60%;
     display: grid;
@@ -283,18 +332,18 @@ h1 {
     font-family: 'Merriweather';
 }
 
-/*CONTACTO*/
+/* =================================
+    CONTACTO MAIN
+================================= */
 
-/****** MAIN ********/
-
-.contacto-main{
+.contacto__main{
     width: 100%;
     display: flex;
     text-align: start;
-    padding: 188px 50px 188px 50px;
+    padding: 70px 50px 70px 50px;
 }
 
-.contacto-main-section{
+.contacto__main--section{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -302,5 +351,141 @@ h1 {
     border-style: solid;
     border-color: rgb(192, 192, 192);
     border-radius: 60px;
-    padding: 30px 110px 30px 110px
+    padding: 30px 80px 30px 80px;
+    font-family: 'Merriweather';
 }
+
+
+
+/* =================================
+    NOSOTROS MAIN
+================================= */
+
+.nosotros__main--h2{
+    font-size: 40px;
+    padding-top: 60px;
+    font-family: 'Merriweather';
+}
+
+.nosotros__main--section {
+    display: flex;
+    padding: 60px 90px 90px 90px;  
+}
+
+.nosotros__main--section img {
+    width: 600px;
+    height: 500px;
+    object-fit: cover;
+    padding: 0 50px 50px 50px;
+}
+
+.nosotros__main--section p {
+    text-align: start;
+    font-size: 16px;
+    width: 70%;
+    font-family: 'Merriweather';
+}
+
+.nosotros__main--section article {
+    display: flex;
+    flex-direction: column;
+}
+
+/* =================================
+    MEDIA QUERIES
+================================= */
+@media (max-width: 768px) {
+    /* HEADER Y NAVBAR */
+    .navbar-collapse {
+        position: absolute;
+        top: 120px;
+        left: 0;
+        width: 100%;
+        background-color: rgb(212, 230, 241);
+        z-index: 1000;
+        padding: 20px;
+    }
+
+    .header__menu {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .header__lista {
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        gap: 20px;
+        padding-bottom: 20px;
+    }
+
+    .header__acciones {
+        width: auto;
+        margin-top: 20px;
+        gap: 20px;
+    }
+
+    .header__marca {
+        padding-left: 20px;
+    }
+
+    /* BUSCADOR */
+    .buscador__input {
+        width: 60%;
+    }
+
+    /* IMAGENES */
+    .productos {
+        flex-direction: column;
+    }
+
+    /* FOOTER */
+    #footer {
+        flex-direction: column;
+        height: auto;
+        gap: 20px;
+    }
+
+    .footer__contenido {
+        padding-left: 140px;
+    }
+
+    .footer__novedades {
+        width: 100%;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .footer__input {
+        width: 100%;
+    }
+
+    .tema {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .header__titulo {
+        font-size: 40px;
+    }
+
+    .header__imagen-logo {
+        width: 80px;
+    }
+
+    .buscador__input {
+        width: 90%;
+    }
+
+    .producto__imagen {
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .footer__input {
+        width: 100%;
+    }
+}
+
