--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,20 @@ html, body {
     font-family: 'Merriweather';
 }
 
+.ubicacion__sucursal {
+    flex: 0 1 300px;
+    background: white;
+    border-radius: 10px;
+    padding: 10px;
+    transition: box-shadow 0.3s ease;
+    border-radius: 10px;
+}
+
+.ubicacion__sucursal:hover {
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
+
 /* =================================
     CONTACTO MAIN
 ================================= */
@@ -497,8 +511,53 @@ html, body {
         flex-direction: column;
         height: 100%;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
+
+    /* UBICACION */
+
+    .ubicacion__main--h2 {
+        font-size: 35px;
+        text-align: center;
+        padding: 20px 10px;
+    }
+
+    .ubicacion__main--mapa {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding: 10px;
+    }
+
+    .ubicacion__imagen--mapa {
+        width: 100%;
+        max-width: 400px;
+        height: auto;
+    }
+
+    .ubicacion__ejemploSucursales {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 10px;
+    }
+
+    .ubicacion__sucursal {
+        background-color: #f8f9fa;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .ubicacion__sucursal h4 {
+        font-size: 20px;
+    }
+
+    .ubicacion__sucursal p {
+        font-size: 14px;
+    }
+}
 
     /* CATALOGO */
     .catalogo__main--h2 {
@@ -536,6 +595,7 @@ html, body {
 
 @media (max-width: 480px) {
 
+    /* HEADER NAVBAR */
     .header__titulo {
         font-size: 40px;
     }
@@ -544,16 +604,36 @@ html, body {
         width: 80px;
     }
 
+    /*  BUSCADOR INPUT  */
     .buscador__input {
         width: 90%;
     }
 
+    /*  IMAGENES  */
     .producto__imagen {
         width: 100%;
         max-width: 250px;
     }
 
+    /*  FOOTER  */
     .footer__input {
         width: 100%;
+    }
+
+    /*     UBICACION      */
+    .ubicacion__main--h2 {
+        font-size: 28px;
+    }
+
+    .ubicacion__imagen--mapa {
+        max-width: 300px;
+    }
+
+    .ubicacion__sucursal h4 {
+        font-size: 18px;
+    }
+
+    .ubicacion__sucursal p {
+        font-size: 12px;
     }
 }
