--- a/css/style.css
+++ b/css/style.css
@@ -241,84 +241,6 @@ html, body {
 }
 
 /* =================================
-    FOOTER
-================================= */
-#footer {
-  width: 100%;
-  height: auto;
-  min-height: 110px;
-  background-color: rgb(23, 32, 42);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px;
-}
-
-.footer__novedades {
-  width: 35%;
-  max-height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.footer__titulo {
-  font-family: "Merriweather";
-  font-size: 15px;
-  color: rgb(213, 216, 220);
-}
-
-.footer__input {
-  width: 300px;
-}
-
-.footer__contenido {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  gap: 20px;
-  padding-right: 140px;
-}
-
-.redes {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  gap: 15px;
-}
-
-.redes__grupo {
-  display: flex;
-  gap: 15px;
-}
-
-.redes__enlace {
-  color: rgb(213, 216, 220);
-}
-
-.redes__enlace i:hover {
-  color: rgb(86, 101, 115);
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.footer__logo {
-  width: 80px;
-  padding: 0 15px;
-}
-
-.tema {
-  width: 35%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-/* =================================
     CATALOGO MAIN
 ================================= */
 .catalogo-formSelect {
@@ -467,6 +389,84 @@ html, body {
 }
 
 /* =================================
+    FOOTER
+================================= */
+#footer {
+  width: 100%;
+  height: auto;
+  min-height: 110px;
+  background-color: rgb(23, 32, 42);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+.footer__novedades {
+  width: 35%;
+  max-height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.footer__titulo {
+  font-family: "Merriweather";
+  font-size: 15px;
+  color: rgb(213, 216, 220);
+}
+
+.footer__input {
+  width: 300px;
+}
+
+.footer__contenido {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  gap: 20px;
+  padding-right: 140px;
+}
+
+.redes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  gap: 15px;
+}
+
+.redes__grupo {
+  display: flex;
+  gap: 15px;
+}
+
+.redes__enlace {
+  color: rgb(213, 216, 220);
+}
+
+.redes__enlace i:hover {
+  color: rgb(86, 101, 115);
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer__logo {
+  width: 80px;
+  padding: 0 15px;
+}
+
+.tema {
+  width: 35%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* =================================
     MEDIA QUERIES
 ================================= */
 @media (max-width: 768px) {
@@ -509,11 +509,35 @@ html, body {
   }
   /* IMAGENES */
   .productos {
-    flex-direction: column;
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+  }
+  .producto {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    height: auto;
+    align-items: center;
+  }
+  .producto h3 {
+    font-size: 10px;
+  }
+  .producto__imagen {
+    max-width: 100%;
+    width: 150px;
+    height: auto;
+  }
+  .producto__titulo {
+    font-size: 10px;
+  }
+  .producto__imagen {
+    width: 100px;
+  }
+  .producto__descripcion {
+    font-size: 7px;
   }
   /* FOOTER */
   #footer {
